# ai-daily-digest

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOY.md  FLOW_OPTIMIZATION_SUMMARY.md  LICENSE  OPTIMIZATION_SUMMARY.md  README.md  collectors.py  config.py  delivery.py  llm.py  llm_providers.yaml  main.py  models.py  preview_report.py  processing.py  pyproject.toml  report.py  requirements-dev.txt  requirements.txt  sources.yaml  test_qbitai.py  test_scraper.py
.cursor/plans/: ai_news_agent_prd_49b630f3.plan.md  全仓优化方案_3dcc2c73.plan.md  采集评分流程优化_71b4f704.plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  daily-digest.yml
docs/: README.md  implementation.md  llm_guide.md
scripts/: README.md  debug_llm.py  setup_git.ps1  test_config.py
tests/: test_config.py  test_models.py  test_processing.py
