[project]
name = "ai-daily-digest"
version = "1.0.0"
description = "AI新闻聚合日报Agent"
requires-python = ">=3.10"

[tool.ruff]
# 代码行长度
line-length = 100

# Python 版本
target-version = "py310"

[tool.ruff.lint]
# 启用的规则集
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

# 忽略的规则
ignore = [
    "E501",  # 行太长（已由 line-length 控制）
    "B008",  # 函数调用中的默认参数
]

[tool.ruff.format]
# 使用双引号
quote-style = "double"

# 缩进使用空格
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
